--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ fonttools==4.55.3
 fsspec==2024.2.0
 gast==0.6.0
 google-pasta==0.2.0
+greenlet==3.1.1
 grpcio==1.68.1
 h5py==3.12.1
 idna==3.10
@@ -34,6 +35,7 @@ pandas==2.2.3
 pillow==11.0.0
 protobuf==5.29.1
 Pygments==2.18.0
+pyodbc==5.2.0
 pyparsing==3.2.0
 PyQt5==5.15.11
 PyQt5-Qt5==5.15.2
@@ -46,6 +48,7 @@ rich==13.9.4
 scipy==1.14.1
 setuptools==75.6.0
 six==1.17.0
+SQLAlchemy==2.0.36
 sympy==1.13.1
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
